<resources>
    <string name="app_name">Find Fast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="if_you_don_t_have_an_account">If you don\'t have an account,\u0020</string>
    <string name="register">Register</string>
    <string name="here">\u0020here.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="if_you_already_have_an_account">"If you already have an account,\u0020"</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="order_history">Order History</string>
    <string name="cart">Cart</string>
    <string name="welcome">Welcome!</string>
    <string name="update_profile">Update Profile</string>
    <string name="cancel">Cancel</string>
    <string name="transactions">Transactions</string>
    <string name="back">Back</string>
    <string name="details">Details</string>
    <string name="order_details">Order Details</string>
    <string name="items_purchased">Items Purchased:</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="total_cost">Total Cost</string>
    <string name="order_status">Order Status:\u0020</string>
    <string name="delivered">Delivered</string>
    <string name="privilege_level">Privilege Level:\u0020</string>
    <string name="user_activities">User Activities</string>
    <string name="financial_report">Financial Report</string>
    <string name="order_management">Order Management</string>
    <string name="all_orders">All Orders</string>
    <string name="in_progress">In Progress</string>
    <string name="status">Status:\u0020</string>
    <string name="refresh_order_list">Refresh Order List</string>
    <string name="find_items">Find Items</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="report_range">Report Range</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="number_of_items_manufactured">Number of Items Manufactured</string>
    <string name="manufactured_cost">Manufactured Cost</string>
    <string name="revenue_growth">Revenue Growth</string>
    <string name="number_of_orders">Number of Orders</string>
    <string name="last_month_revenue">Last Month Revenue</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="filter_order_list">Filter Order List</string>
    <string name="all">All</string>

    <string-array name="material_options">
        <item>All</item>
        <item>Wood</item>
        <item>Metal</item>
        <item>Plastic</item>
        <item>Glass</item>
    </string-array>

</resources>