<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:alpha="0.7"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:text="@string/order_details" />

    <LinearLayout
        android:id="@+id/viewNoPurcahse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@color/accent"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_date"
                    android:textSize="14sp"
                    android:paddingTop="6dp"
                    android:alpha="0.7"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_date_time"/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="3dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="Wed, 13 Nov 2024 08:18:16 GMT"/>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@color/black"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@color/accent"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost"
                    android:textSize="14sp"
                    android:paddingTop="6dp"
                    android:alpha="0.7"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_total_cost"/>

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="3dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="$ 1,765.55"/>

            </LinearLayout>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:alpha="0.2"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@color/accent"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number of Items"
                    android:textSize="14sp"
                    android:paddingTop="6dp"
                    android:alpha="0.7"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="3"/>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@color/black"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@color/accent"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_status"
                    android:textSize="14sp"
                    android:paddingTop="6dp"
                    android:alpha="0.7"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_order_status"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="3dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/delivered"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Product List"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:alpha="0.7"
        android:paddingVertical="3dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderItemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/back" />

</LinearLayout>