<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_horizontal"
    android:paddingVertical="12dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textStyle="bold"
                android:alpha="0.7"
                android:layout_weight="1"
                android:text="" />

            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cardCornerRadius="37.5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_profile"
                    android:alpha="0.5"
                    android:backgroundTint="@color/secondary"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnEditProfile"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="4dp"
                android:paddingHorizontal="4dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingVertical="12dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_edit_profile"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_profile"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnOrderHistory"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="4dp"
                android:paddingHorizontal="4dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingVertical="12dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_purchase_history"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_history"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnCart"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="4dp"
                android:paddingHorizontal="4dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingVertical="12dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_cart"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:alpha="0.1"
            android:background="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>